--- a/package.json
+++ b/package.json
@@ -20,23 +20,24 @@
   },
   "main": "src/index.js",
   "scripts": {
-    "test": "eslint ./src ./test && mocha"
+    "lint": "eslint ./src ./test",
+    "test": "npm run lint && mocha"
   },
   "dependencies": {
-    "bunyan": "^1.8.12",
-    "sinon": "^4.1.2"
+    "bunyan": "^1.8.12"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
-    "eslint": "^4.12.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "mocha": "^4.0.1"
+    "chai": "^4.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "mocha": "^7.0.1",
+    "sinon": "^8.1.1"
   },
   "engines": {
-    "node": "^8.9.1"
+    "node": ">=8.9.1"
   }
 }
